Reformatted heights/widths to use % and fit to viewport, fixed spacing for modal, use relative units

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,8 +5,8 @@
 }
 
 body {
+  margin: 0;
   background-image: url(../images/smash/background.jpg);
-  background-color: plum;
   background-size: cover;
   background-repeat: no-repeat;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
@@ -45,10 +45,10 @@ body {
 .header_container{
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: baseline;
+  height: 10vh;
 }
   .top_heading {
-    display: inline-block;
     font-size: 6rem;
     font-family: galliard, Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     background: -webkit-linear-gradient(black 35%, darkred 70%, firebrick 100%);
@@ -59,7 +59,6 @@ body {
     margin: 1rem;
   }
   .top_subheading {
-    display: inline-block;
     font-size: 4.5rem;
     background: -webkit-linear-gradient(black 45%, plum);
     -webkit-background-clip: text;
@@ -72,16 +71,18 @@ body {
 .main_display {
   display: flex;
   justify-content: center;
+  height: 90vh;
 }
   /* STATS ASIDE */
   .stats_container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     text-align: center;
-    width: 25%;
+    width: 16%;
     letter-spacing: 0.1rem;
+    margin: 1rem;
   }
     .stats_title {
       margin: 1rem;
@@ -96,11 +97,11 @@ body {
       border: 1px solid white;
       border-radius: 1rem;
       -webkit-text-stroke: 0.5px white;
-      width: 65%;
-      padding: 2rem 0;
+      height: 10%;
+      width: 100%;
       font-size: 2.5rem;
       text-align: center;
-      margin: 0.5rem 0;
+      line-height: 9vh;
     }
       .stock_head {
         transform: perspective(1px) translateZ(0);
@@ -108,15 +109,16 @@ body {
 
   /* GAME AREA SECTION */
   .game_area_container {
-    width: 60%;
+    width: 65%;
+    margin: 1rem;
   }
     .cards_container {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-around;
       align-content: space-around;
-      width: 100%;
       height: 100%;
+      width: 100%;
       perspective: 100rem;
     }
       .card_div{
@@ -196,19 +198,25 @@ body {
   background-color: rgba(0, 0, 0, 0.8);
 }
   .modal_area {
-    background-color: plum;
     background-image: url(../images/smash/modal_background.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: repeat-x;
-    margin: 15% auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 40%;
     padding: 5em;
     border: 1px solid white;
-    border-radius: 10px;
-    width: 40%;
+    border-radius: 1rem;
   }
     .win_message {
-      text-align: center;
+      background-image: url(../images/smash/win_message.png);
+      background-size: contain;
+      background-position: center;
+      background-repeat: no-repeat;
+      height: 15rem;
     }
     .play_again_button {
       background-color: rgba(221, 160, 221, .4);
